Fixing overflow

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,10 +45,16 @@ body
 {
     font-size:20px;
 }
+
 #post
 {
     background: white;
     padding: 1em;
+}
+
+#post img
+{
+    max-width: 50%;
 }
 
 #footer
